--- a/index.html
+++ b/index.html
@@ -28,20 +28,11 @@
             color: #000000;
         }
 
-        .name {
-            /* Remove the line below if you want a wider page */
-            max-width: 800px !important;
-            font-family: Arial, Helvetica, sans-serif;
-            color: #000000;
-        }
-
-
         .text {
             /* Remove the line below if you want a wider page */
             max-width: 800px !important;
             font-family: Arial, Helvetica, sans-serif;
             color: #000000;
-            font-size: medium;
         }
     </style>
 
@@ -57,3 +48,16 @@
     </script>
 
 </head>
+
+<body>
+    <section>
+        
+        <div class="container">
+            <h1>Processing Times for Permanent Residency Applications</h1>
+            <iframe src="plot.html" width="100%" height="600"></iframe>
+        </div>
+
+    </section>
+</body>
+
+</html>
