--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
         .title {
             /* Remove the line below if you want a wider page */
             max-width: 800px !important;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Courier New', Courier, monospace;
             color: #000000;
         }
 
         .subtitle {
             /* Remove the line below if you want a wider page */
             max-width: 800px !important;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Courier New', Courier, monospace;
             color: #000000;
         }
 
         .text {
             /* Remove the line below if you want a wider page */
             max-width: 800px !important;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Courier New', Courier, monospace;
             color: #000000;
         }
     </style>
@@ -50,8 +50,12 @@
 </head>
 
 <body>
-    <section>
-        
+    <section class="section">
+
+        <div class="container">
+<p class="title">Processing Times</p>
+        </div>
+
         <div class="container">
             <h1>Processing Times for Permanent Residency Applications</h1>
             <iframe src="plot.html" width="100%" height="600"></iframe>
