--- a/index.html
+++ b/index.html
@@ -9,30 +9,32 @@
     <style>
         .container {
             /* Remove the line below if you want a wider page */
-            max-width: 900px !important;
+            max-width: 600px !important;
             font-family: Arial, Helvetica, sans-serif;
             color: #000000;
         }
 
+        .link {
+            color: #f701f7;
+        }
+
+
         .title {
-            /* Remove the line below if you want a wider page */
-            max-width: 800px !important;
             font-family: 'Courier New', Courier, monospace;
             color: #000000;
+            margin-bottom: 30px;
         }
 
         .subtitle {
-            /* Remove the line below if you want a wider page */
-            max-width: 800px !important;
             font-family: 'Courier New', Courier, monospace;
             color: #000000;
+            margin-bottom: 30px;
         }
 
         .text {
-            /* Remove the line below if you want a wider page */
-            max-width: 800px !important;
             font-family: 'Courier New', Courier, monospace;
             color: #000000;
+            margin-bottom: 15px;
         }
     </style>
 
@@ -53,11 +55,18 @@
     <section class="section">
 
         <div class="container">
-<p class="title">Processing Times</p>
+            <p class="title">PR Processing Times</p>
         </div>
 
         <div class="container">
-            <h1>Processing Times for Permanent Residency Applications</h1>
+            <p class="subtitle">This chart tracks the processing times for Canadian Permanent Residency applications.</p>
+        </div>
+
+        <div class="container">
+            <p class="text"><a class="link" href="https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-processing-times.html">IRCC updates</a> are collected every Monday and added to a custom database. Check out the data <a class="link" href="https://github.com/kellywaldro/processing-times/tree/main">here.</a></p>
+        </div>
+
+        <div class="container">
             <iframe src="plot.html" width="100%" height="600"></iframe>
         </div>
 
