--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="container">
-            <p class="subtitle">This chart tracks the processing times for Canadian Permanent Residency applications.</p>
+            <p class="subtitle">This chart tracks the processing times for Canadian Permanent Residency applications(for Economic Migration programs).</p>
         </div>
 
         <div class="container">
